* 2012-06-21 - thorben.betten@open-xchange.com

 - Fix for bug 22227: Fixed setting look-up marker in appended message
 - Fix for bug 22166: Check SMTP port on SOAP-to-Object conversion
 - Fix for bug 21389: Fixed sorting in drafts folder
 - Fix for bug 22056: Invalidate folder cache on mail account update

* 2012-06-20 - thorben.betten@open-xchange.com

 - Fix for bug 22336: Fixed possible StackOverflowError on non-css content sanitizing

* 2012-06-20 - martin.herfurth@open-xchange.com

 - Fix for bug 21895: Updating Appointments as organizer does not necessarily add the organizer as participant.

* 2012-06-19 - thorben.betten@open-xchange.com

 - Fix for bug 22321: Invalidate caches on changes global address book permissions

* 2012-06-18 - thorben.betten@open-xchange.com

- Fix for bug 22319: Support for IDN domains in IMAP authentication bundle

* 2012-06-17 - thorben.betten@open-xchange.com

 - Fix for bug 21882: Update task to apply suggested changes to database schema

* 2012-06-16 - thorben.betten@open-xchange.com

 - Fix for bug 22297: Cancel consistency check for EAS folder tree (because not used, yet)
 - Fix for bug 22152: Applying proper user identifier to temporary session if free-busy request is performed for a user participant

* 2012-06-15 - thorben.betten@open-xchange.com

 - Fix for bug 22312: Context-sensitive locks & lowered timeout on tryLock() invocation to reduce possible concurrent cache access attempts

* 2012-06-14 - thorben.betten@open-xchange.com

 - Partial fix for bug 21872: Abort default folder check if an over-quota error is encountered

* 2012-06-13 - thorben.betten@open-xchange.com

 - Fix for bug 22304: Drop remaining "<![endif]-->" from HTML content
 - Fix for bug 22300: Increased default value for property "com.openexchange.json.maxSize" in file 'server.properties' from 1000 to 2500

* 2012-06-12 - thorben.betten@open-xchange.com

 - Fix for bug 22294: Dealing with possible empty sub-type