@@ -1,3 +1,7 @@
+* 2012-06-21 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 22337: Fixed Strange recipient and sender of counter mails.
+
 * 2012-06-21 - thorben.betten@open-xchange.com
 
  - Fix for bug 22227: Fixed setting look-up marker in appended message
